add funcs for json validation + swagger API for endpoints
